--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,1 +1,13 @@
 <h1>Hello</h1>
+<form method='POST' action='/auth/signup'>
+    <label for="new-name">Name</label>
+    <input type="text" id='new-name' name='name'>
+
+    <label for="new-email">Email</label>
+    <input type="email" id='new-email' name='email'>
+
+    <label for="new-password">password</label>
+    <input type="password" id='new-password' name='password'>
+
+    <input type="submit" value='Sign up'>
+</form>
