--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>818 EXPRESS AUTH</h1>
+    <header>
+        <h1>818 EXPRESS AUTH</h1>
+        <nav>
+            <ul>
+                <% if (!currentUser){%>
+                    <li><a href="/auth/signup">Sign Up</a></li>
+                    <li><a href="/auth/login">login</a></li>
+                <% }else{ %> 
+                    <li><a href="/auth/logout">Logout</a></li>
+                    <li><a href="/profile">Profile</a></li>
+                <%}%>
+            </ul>
+        </nav>
+    </header>
+    <%- include('partials/alerts.ejs')%>
     <%- body %>
 </body>
 </html>
