working API search allowing users to search netflix by string

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,6 @@
-<h2>express home route</h2>
+<h1>REEEEEEE</h1>
+<form method='GET' action='/search'>
+    <label for='searchTerm'>Search for your next binge:</label>
+    <input type='text' id='searchTearm' name='searchTerm'>
+    <input type='submit'>
+</form>
