user is able to add content to their watchlist and view their watchlist page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
                 <% }else{ %> 
                     <li><a href="/auth/logout">Logout</a></li>
                     <li><a href="/profile">Profile</a></li>
-                    <li><a href="/watchedlist">Watch List</a></li>
+                    <li><a href="/watchlist">Watch List</a></li>
                 <%}%>
             </ul>
         </nav>
