--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,7 @@
                     <li><a href="/auth/logout">Logout</a></li>
                     <li><a href="/profile">Profile</a></li>
                     <li><a href="/watchlist">Watch List</a></li>
+                    <li><a href="/watchlist/reviews">Watched List</a></li>
                 <%}%>
             </ul>
         </nav>
