--- a/views/results.ejs
+++ b/views/results.ejs
@@ -17,7 +17,7 @@
             <%for(let i = 0; i < keys.length; i++){%>
                 <input type="hidden" name=<%=keys[i]%> value='<%=values[i]%>'>
             <%}%>
-            <input type="submit" >
+            <input type="submit" value="Watchlist it">
         </form>
         
     <%}%>
