made paths far more RESTful

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<h1>REEEEEEE</h1>
+<h1>Search for Your Next Binge</h1>
 <form method='GET' action='/search'>
     <label for='searchTerm'>Search for your next binge:</label>
     <input type='text' id='searchTearm' name='searchTerm'>
