--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -12,14 +13,15 @@
         <nav>
             <ul>
                 <% if (!currentUser){%>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/auth/login">Login</a></li>
                     <li><a href="/auth/signup">Sign Up</a></li>
-                    <li><a href="/auth/login">login</a></li>
-                    
                 <% }else{ %> 
-                    <li><a href="/auth/logout">Logout</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/profile">Profile</a></li>
                     <li><a href="/watchlist">Watch List</a></li>
                     <li><a href="/watchlist/reviews">Watched List</a></li>
+                    <li><a href="/auth/logout">Logout</a></li>
                 <%}%>
             </ul>
         </nav>
