--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,1 +1,5 @@
-<h2><%= currentUser.name %></h2>
+<h2>Name: <%= currentUser.name %></h2>
+<h2>Email: <%= currentUser.email %></h2>
+<form action="/profile/?_method=DELETE" method="POST">
+    <input type="submit" class="btn btn-primary" value="Delete Account">
+</form>
