--- a/views/watchlist/viewList.ejs
+++ b/views/watchlist/viewList.ejs
@@ -1,4 +1,4 @@
-<%- include('../home.ejs')%>
+
 <ul>
     <%for(thing of results){%>
         
@@ -8,17 +8,18 @@
         <ul>
             <li>Type: <%= thing.vtype%></li>
             <li>Year: <%= thing.year%></li>
+            <% if(!thing.imdbrating){%>
+                <% thing.imdbrating = "No Rating Available" %>
+           <%  } %>
             <li>IMDB Rating: <%= thing.imdbrating%></li>
             <!-- nextflix user reviews -->
         </ul>
-        <form action="/watchlist/review" method="GET">
-            <input type="hidden" name="title" value='<%= thing.title%>'>
-            <input type="hidden" name="img" value='<%=thing.img%>'>
-            <input type="hidden" name="synopsis" value='<%= thing.synopsis%>'>
-            <input type="hidden" name="vtype" value='<%=thing.vtype%>'>
-            <input type="hidden" name="year" value='<%=thing.year%>'>
-            <input type="hidden" name="imdbrating" value='<%=thing.imdbrating%>'>
+        <form action="/watchlist/review/<%= thing.id%>" method="GET">
+     
             <input type="submit" value="Review it">
+        </form>
+        <form action="/watchlist/<%= thing.id%>/?_method=DELETE" method="POST">
+            <input type="submit" value="Delete From Watchlist">
         </form>
     <%}%>
 </ul>
