--- a/views/watchlist/newReview.ejs
+++ b/views/watchlist/newReview.ejs
@@ -20,7 +20,7 @@
 
   <div class="form-group">
     <label for="bingeWorthy">Binge Worthy?</label>
-    <input type="radio" class="form-control" id="bingeWorthy" name="bingeWorthy" >
+    <input type="checkbox" class="form-control" id="bingeWorthy" name="bingeWorthy" >
   </div>
 
   <div class="form-group">
