--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,4 @@
-<h2>login</h2>
+<h2>Login</h2>
 <form action="/auth/login" method="POST">
     <label for="auth-email"></label>
     <input type="email" id='auth-email' name='email'>
