--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,17 @@
-<h1>Search for Your Next Binge</h1>
-<form method='GET' action='/search'>
-    <label for='searchTerm'>Search for your next binge:</label>
-    <input type='text' id='searchTearm' name='searchTerm'>
-    <input type='submit'>
-</form>
+<div class="searchBox">
+    <form method='GET' action='/search/title'>
+            <label for='searchTerm'>Search by Title:</label>
+            <div class="textbox">
+                <input type='text' id='searchTearm' name='searchTerm' >
+            </div>
+            <input type='submit' value="Search by Title">
+    </form>
+
+    <form method='GET' action='/search/genre' autocomplete="off">
+        <label for='genreInput'>Search by Genre:</label>
+        <div class="autocomplete">
+            <input id="genreInput" type="text" name="genre" placeholder="Genre">
+        </div>
+        <input type='submit' value="Search By Genre">
+    </form>
+</div>
