--- a/views/watchlist/editReview.ejs
+++ b/views/watchlist/editReview.ejs
@@ -1,9 +1,9 @@
 <h1>Reviews</h1>
 <% let checked = "" %>
 <% if(show.reviews[0].bingeworthy){%>
-   <%  checked = "checked" %>
+   <%  checked = "true" %>
 <%}else{%>
-     <% checked = "" %>
+     <% checked = "false" %>
   <%  } %>
 <ul>
     
@@ -20,7 +20,7 @@
           
             <div class="form-group">
               <label for="bingeWorthy">Binge Worthy?</label>
-              <input type="radio" class="form-control" id="bingeWorthy" name="bingeWorthy" checked=<%=checked%>>
+              <input type="checkbox" class="form-control" id="bingeWorthy" name="bingeWorthy" checked=<%=checked%>>
             </div>
           
             <div class="form-group">
