--- a/views/watchlist/reviews.ejs
+++ b/views/watchlist/reviews.ejs
@@ -1,21 +1,24 @@
-<h1>Reviews</h1>
-
+<h2>Watched List:</h2>
 <ul>
     <%for(eachReview of review){%>
-        
-        <li><%= eachReview.show.title%></li>
-        <img src=<%=eachReview.show.img%> alt=<%=eachReview.show.title%>>
-        
-        <ul>
-            <li>Your Rating: <%= eachReview.rating%></li>
-            <li>BingeWorthy: <%= eachReview.bingeworthy%></li>
-            <li>Review: <%= eachReview.review%></li>
-            <!-- nextflix user reviews -->
-        </ul>
-        <form action="/watchlist/review/edit/<%= eachReview.id%>" method="GET">
-            <input type="hidden" name="title" value='<%= eachReview.show.title%>'>
-            <input type="submit" value="Edit/Remove Review">
-        </form>
-        
+        <div class="show">
+            <li><%= eachReview.show.title%></li>
+            <img src=<%=eachReview.show.img%> alt=<%=eachReview.show.title%>>
+            
+            <ul>
+                <li>Your Rating: <%= eachReview.rating%></li>
+                <% if(eachReview.bingeworthy){%>
+                    <li class="binge">BingeWorthy: &#128525;</li>
+                <%}else{%>
+                    <li class="binge">BingeWorthy: Meh</li>
+                <%}%>
+                <li>Review: <%= eachReview.review%></li>
+                <!-- nextflix user reviews -->
+            </ul>
+            <form action="/watchlist/review/edit/<%= eachReview.id%>" method="GET">
+                <input type="hidden" name="title" value='<%= eachReview.show.title%>'>
+                <input type="submit" value="Edit/Remove Review">
+            </form>
+        </div>
     <%}%>
 </ul>
