--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <form method='GET' action='/search/genre' autocomplete="off">
         <label for='genreInput'>Search by Genre:</label>
         <div class="autocomplete">
-            <input id="genreInput" type="text" name="genre" placeholder="Genre">
+            <input id="genreInput" type="text" name="genre" >
         </div>
         <input type='submit' value="Search By Genre">
     </form>
