--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,10 +1,14 @@
-<h2>Login</h2>
-<form action="/auth/login" method="POST">
-    <label for="auth-email"></label>
-    <input type="email" id='auth-email' name='email'>
-
-    <label for="auth-passord"></label>
-    <input type="password" id='auth-password' name='password'>
-
-    <input type="submit" value='Log in'>
-</form>
+<div class="login">
+    <h2>Login</h2>
+    <form action="/auth/login" method="POST">
+        <div class="loginInput">
+            <label for="auth-email">Email:</label>
+            <input type="email" id='auth-email' name='email'>
+        </div>
+        <div class="loginInput">
+            <label for="auth-passord">Password:</label>
+            <input type="password" id='auth-password' name='password'>
+        </div>
+        <input type="submit" value='Log in'>
+    </form>
+</div>
