--- a/views/watchlist/editReview.ejs
+++ b/views/watchlist/editReview.ejs
@@ -1,4 +1,4 @@
-<h1>Reviews</h1>
+<h1>Edit Review:</h1>
 <% let checked = "" %>
 <% if(show.reviews[0].bingeworthy){%>
    <%  checked = "true" %>
@@ -7,34 +7,35 @@
   <%  } %>
 <ul>
     
-        
-        <li><%= show.title%></li>
-        <img src=<%=show.img%> alt=<%=show.title%>>
-        
-        <form action="/watchlist/review/<%=show.reviews[0].id%>/?_method=PUT" method="POST">
-            <input type="hidden" name="title" value='<%= show.title%>'>
-            <div class="form-group">
-              <label for="rating">Rating</label>
-              <input type="number" class="form-control" id="rating" name="rating" value=<%=show.reviews[0].rating%>>
-            </div>
-          
-            <div class="form-group">
-              <label for="bingeWorthy">Binge Worthy?</label>
-              <input type="checkbox" class="form-control" id="bingeWorthy" name="bingeWorthy" checked=<%=checked%>>
-            </div>
-          
-            <div class="form-group">
-              <label for="review">Review It</label>
-              <textarea type="text" class="form-control" id="review" name="review" ><%=show.reviews[0].review%></textarea>
-            </div>
+        <div class="showEdit">
+            <li><%= show.title%></li>
+            <img src=<%=show.img%> alt=<%=show.title%>>
             
-            <input type="submit" class="btn btn-primary" value="Edit Review">
-        </form>
+            <form action="/watchlist/review/<%=show.reviews[0].id%>/?_method=PUT" method="POST">
+                <input type="hidden" name="title" value='<%= show.title%>'>
+                <div class="form-group">
+                <label for="rating">Rating</label>
+                <input type="number" class="form-control" id="rating" name="rating" value=<%=show.reviews[0].rating%> min="1" max="10">
+                </div>
+            
+                <div class="form-group">
+                <label for="bingeWorthy">Binge Worthy?</label>
+                <input type="checkbox" class="form-control" id="bingeWorthy" name="bingeWorthy" checked=<%=checked%>>
+                </div>
+            
+                <div class="form-group">
+                <label for="review">Review It</label>
+                <textarea type="text" class="form-control" id="review" name="review" ><%=show.reviews[0].review%></textarea>
+                </div>
+                
+                <input type="submit" class="btn btn-primary" value="Edit Review">
+            </form>
 
 
-        <form action="/watchlist/review/<%= show.reviews[0].id%>/?_method=DELETE" method="POST">
-            <input type="hidden" name="title" value='<%= show.title%>'>
+            <form action="/watchlist/review/<%= show.reviews[0].id%>/?_method=DELETE" method="POST">
+                <input type="hidden" name="title" value='<%= show.title%>'>
 
-            <input type="submit" class="btn btn-primary" value="Delete Review">
-        </form>
+                <input type="submit" class="btn btn-primary" value="Delete Review">
+            </form>
+        </div>
 </ul>
