--- a/views/watchlist/newReview.ejs
+++ b/views/watchlist/newReview.ejs
@@ -15,7 +15,7 @@
   <input type="hidden" name="title" value='<%= showToBeReviewed.title%>'>
   <div class="form-group">
     <label for="rating">Rating</label>
-    <input type="number" class="form-control" id="rating" name="rating">
+    <input type="number" class="form-control" id="rating" name="rating" min="1" max="10">
   </div>
 
   <div class="form-group">
