updated stlying for inputs and display of show info

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WN</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
         <h1>What's Nextflix?</h1>
         <%- include('partials/alerts.ejs')%>
         <p>The app designed to help you fill the void</p>
+        <p class="description">Search Netflix content by title or by one of over 500 genres, add to your list to be watched. Once watched review content to add to your Watched List.</p>
         <nav>
             
                 <% if (!currentUser){%>
