--- a/views/watchlist/reviews.ejs
+++ b/views/watchlist/reviews.ejs
@@ -1,5 +1,5 @@
 <h2>Watched List:</h2>
-<ul>
+<ul class="listOfShows">
     <%for(eachReview of review){%>
         <div class="show">
             <li><%= eachReview.show.title%></li>
