--- a/views/watchlist/viewList.ejs
+++ b/views/watchlist/viewList.ejs
@@ -1,5 +1,5 @@
 <h2>Watch List:</h2>
-<ul>
+<ul class="listOfShows">
     <%for(thing of results){%>
         <div class="show">
             <% thing.title = thing.title.replace(/&#39;/g, "'")%>
