--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,13 +1,19 @@
-<h1>Hello</h1>
-<form method='POST' action='/auth/signup'>
-    <label for="new-name">Name</label>
-    <input type="text" id='new-name' name='name'>
+<div class="login">
+    <h1>Sign Up</h1>
+    <form method='POST' action='/auth/signup'>
+        <div class="loginInput">
+            <label for="new-name">Name</label>
+            <input type="text" id='new-name' name='name' class="nameInput">
+        </div>
+        <div class="loginInput">
+            <label for="new-email">Email</label>
+            <input type="email" id='new-email' name='email'>
+        </div>
+       
+            <label for="new-password">Password</label>
+            <input type="password" id='new-password' name='password'>
+        
 
-    <label for="new-email">Email</label>
-    <input type="email" id='new-email' name='email'>
-
-    <label for="new-password">password</label>
-    <input type="password" id='new-password' name='password'>
-
-    <input type="submit" value='Sign up'>
-</form>
+        <input type="submit" value='Sign up' class="signUpBtn">
+    </form>
+</div>
