--- a/views/watchlist/newReview.ejs
+++ b/views/watchlist/newReview.ejs
@@ -1,32 +1,32 @@
-<h1>Review this ish:</h1>
+<h1>Review this Content:</h1>
 
+<div class="showEdit">
+  <p><%= showToBeReviewed.title%></p>
+          <img src=<%=showToBeReviewed.img%> alt=<%=showToBeReviewed.title%>>
+          <p><%= showToBeReviewed.synopsis%></p>
+          <ul id="reviewInfoList">
+              <li>Type: <%= showToBeReviewed.vtype%></li>
+              <li>Year: <%= showToBeReviewed.year%></li>
+              <li>IMDB Rating: <%= showToBeReviewed.imdbrating%></li>
+          </ul>
 
-<li><%= showToBeReviewed.title%></li>
-        <img src=<%=showToBeReviewed.img%> alt=<%=showToBeReviewed.title%>>
-        <p><%= showToBeReviewed.synopsis%></p>
-        <ul>
-            <li>Type: <%= showToBeReviewed.vtype%></li>
-            <li>Year: <%= showToBeReviewed.year%></li>
-            <li>IMDB Rating: <%= showToBeReviewed.imdbrating%></li>
-            <!-- nextflix user reviews -->
-</ul>
+  <form action="/watchlist/reviews/new" method="POST">
+    <input type="hidden" name="title" value='<%= showToBeReviewed.title%>'>
+    <div class="form-group">
+      <label for="rating">Rating</label>
+      <input type="number" class="form-control" id="rating" name="rating" min="1" max="10">
+    </div>
 
-<form action="/watchlist/reviews/new" method="POST">
-  <input type="hidden" name="title" value='<%= showToBeReviewed.title%>'>
-  <div class="form-group">
-    <label for="rating">Rating</label>
-    <input type="number" class="form-control" id="rating" name="rating" min="1" max="10">
-  </div>
+    <div class="form-group">
+      <label for="bingeWorthy">Binge Worthy?</label>
+      <input type="checkbox" class="form-control" id="bingeWorthy" name="bingeWorthy" >
+    </div>
 
-  <div class="form-group">
-    <label for="bingeWorthy">Binge Worthy?</label>
-    <input type="checkbox" class="form-control" id="bingeWorthy" name="bingeWorthy" >
-  </div>
-
-  <div class="form-group">
-    <label for="review">Review It</label>
-    <textarea type="text" class="form-control" id="review" name="review"></textarea>
-  </div>
-  
-  <input type="submit" class="btn btn-primary">
-</form>
+    <div class="form-group">
+      <label for="review">Review It</label>
+      <textarea type="text" class="form-control" id="review" name="review"></textarea>
+    </div>
+    
+    <input type="submit" class="btn btn-primary">
+  </form>
+</div>
