--- a/views/watchlist/editReview.ejs
+++ b/views/watchlist/editReview.ejs
@@ -1,4 +1,4 @@
-<h1>Edit Review:</h1>
+<h2>Edit Your Review:</h2>
 <% let checked = "" %>
 <% if(show.reviews[0].bingeworthy){%>
    <%  checked = "true" %>
