--- a/views/watchlist/reviews.ejs
+++ b/views/watchlist/reviews.ejs
@@ -1,4 +1,4 @@
-<h2>Watched List:</h2>
+<h2>Your Watched And Reviewed List:</h2>
 <ul class="listOfShows">
     <%for(eachReview of review){%>
         <div class="show">
