--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,20 @@
 <div class="searchBox">
-    <form method='GET' action='/search/title'>
-            <label for='searchTerm'>Search by Title:</label>
-            <div class="textbox">
-                <input type='text' id='searchTearm' name='searchTerm' >
+    <div>
+        <form method='GET' action='/search/title'>
+                <label for='searchTerm'>Search by Title:</label>
+                <div class="textbox">
+                    <input type='text' id='searchTearm' name='searchTerm' >
+                </div>
+                <input type='submit' value="Search by Title">
+        </form>
+    </div>
+    <div>
+        <form method='GET' action='/search/genre' autocomplete="off">
+            <label for='genreInput'>Search by Genre:</label>
+            <div class="autocomplete">
+                <input id="genreInput" type="text" name="genre" >
             </div>
-            <input type='submit' value="Search by Title">
-    </form>
-
-    <form method='GET' action='/search/genre' autocomplete="off">
-        <label for='genreInput'>Search by Genre:</label>
-        <div class="autocomplete">
-            <input id="genreInput" type="text" name="genre" >
-        </div>
-        <input type='submit' value="Search By Genre">
-    </form>
+            <input type='submit' value="Search By Genre">
+        </form>
+    </div>
 </div>
