--- a/views/watchlist/viewList.ejs
+++ b/views/watchlist/viewList.ejs
@@ -1,4 +1,4 @@
-<h2>Watch List:</h2>
+<h2>Your Content To Watch List:</h2>
 <ul class="listOfShows">
     <%for(thing of results){%>
         <div class="show">
