--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,14 +1,22 @@
 <div class="login">
     <h2>Login</h2>
     <form action="/auth/login" method="POST">
-        <div class="loginInput">
-            <label for="auth-email">Email:</label>
-            <input type="email" id='auth-email' name='email'>
+        <div class="row">
+            <div class="col s12">
+              <div class="input-field inline">
+                <input id="email_inline" type="email" class="validate" name="email">
+                <label for="email_inline">Email</label>
+                <span class="helper-text" data-error="wrong" data-success="right"></span>
+              </div>
+            </div>
+            <div class="col s12">
+              <div class="input-field inline">
+                <input id="email_inline" type="password" class="validate" name="password">
+                <label for="email_inline">Password</label>
+              </div>
+            </div>
         </div>
-        <div class="loginInput">
-            <label for="auth-passord">Password:</label>
-            <input type="password" id='auth-password' name='password'>
-        </div>
+        
         <input type="submit" value='Log in'>
     </form>
 </div>
