--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,33 +1,43 @@
 <%- include('home.ejs')%>
 <% if(results !== undefined){%>
-<ul class="listOfShows">
+    <div class="row">
     <%for(thing of results){%>
-        <div class="show">
             <% thing.title = thing.title.replace(/&#39;/g, "'")%>
             <% thing.synopsis = thing.synopsis.replace(/&#39;/g, "'")%>
-            <li><%= thing.title%></li>
-            <img src=<%=thing.img%> alt=<%=thing.title%>>
-            <p><%= thing.synopsis%></p>
-            <ul>
-                <li>Type: <%= thing.vtype%></li>
-                <li>Year: <%= thing.year%></li>
-                <% if(!thing.imdbrating){%>
-                    <% thing.imdbrating = "No Rating Available" %>
-            <%  } %>
-                <li>IMDB Rating: <%= thing.imdbrating%></li>
-            
-            </ul>
             <% let keys = Object.keys(thing)%>
             <% let values = Object.values(thing)%>
-            <form action="/watchlist/new" method="POST">
+            <!-- <form action="/watchlist/new" method="POST">
                 <%for(let i = 0; i < keys.length; i++){%>
                     <input type="hidden" name=<%=keys[i]%> value='<%=values[i]%>'>
                 <%}%>
                 <input type="submit" value="Watchlist it">
-            </form>
-        </div>
+            </form> -->
+
+            <div class="col s12 m6">
+              <div class="card">
+                <div class="card-image">
+                  <img src=<%=thing.img%> alt=<%=thing.title%>>
+                  <span class="card-title"><%= thing.title%></span>
+                  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">+</i></a>
+                </div>
+                <div class="card-content">
+                  <p><%= thing.synopsis%></p>
+                  <ul>
+                    <li>Type: <%= thing.vtype%></li>
+                    <li>Year: <%= thing.year%></li>
+                    <% if(!thing.imdbrating){%>
+                        <% thing.imdbrating = "No Rating Available" %>
+                <%  } %>
+                    <li>IMDB Rating: <%= thing.imdbrating%></li>
+                
+                    </ul>
+                </div>
+              </div>
+            </div>
+        
     <%}%>
-</ul>
+    </div>
+
 <%}else{%>
     <p>No Results Found</p>
 <%}%>
