--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,19 +1,28 @@
 <div class="login">
     <h1>Sign Up</h1>
     <form method='POST' action='/auth/signup'>
-        <div class="loginInput">
-            <label for="new-name">Name</label>
-            <input type="text" id='new-name' name='name' class="nameInput">
-        </div>
-        <div class="loginInput">
-            <label for="new-email">Email</label>
-            <input type="email" id='new-email' name='email'>
-        </div>
-       
-            <label for="new-password">Password</label>
-            <input type="password" id='new-password' name='password'>
-        
+        <div class="row">
+            <div class="col s12">
+                <div class="input-field inline">
+                  <input id="name" type="text" name="name">
+                  <label for="name">Name</label>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="input-field inline">
+                  <input id="new-email" type="email" class="validate" name="email">
+                  <label for="new-email">Email</label>
+                  <span class="helper-text" data-error="wrong" data-success="right"></span>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="input-field inline">
+                    <input id="password" type="password" class="validate" name="password">
+                    <label for="password">Password</label>
+                </div>
+            </div>
 
-        <input type="submit" value='Sign up' class="signUpBtn">
+            <input type="submit" value='Sign up' class="signUpBtn">
+        </div>
     </form>
 </div>
