--- a/views/watchlist/viewList.ejs
+++ b/views/watchlist/viewList.ejs
@@ -1,28 +1,38 @@
 <h2>Your Content To Watch List:</h2>
-<ul class="listOfShows">
+<div class="row">
     <%for(thing of results){%>
-        <div class="show">
+        
             <% thing.title = thing.title.replace(/&#39;/g, "'")%>
             <% thing.synopsis = thing.synopsis.replace(/&#39;/g, "'")%>
-            <li><%= thing.title%></li>
-            <img src=<%=thing.img%> alt=<%=thing.title%>>
-            <p><%= thing.synopsis%></p>
-            <ul>
-                <li>Type: <%= thing.vtype%></li>
-                <li>Year: <%= thing.year%></li>
-                <% if(!thing.imdbrating){%>
-                    <% thing.imdbrating = "No Rating Available" %>
-            <%  } %>
-                <li>IMDB Rating: <%= thing.imdbrating%></li>
-                <!-- nextflix user reviews -->
-            </ul>
-            <form action="/watchlist/review/<%= thing.id%>" method="GET">
-        
-                <input type="submit" value="Review it">
-            </form>
-            <form action="/watchlist/<%= thing.id%>/?_method=DELETE" method="POST">
-                <input type="submit" value="Delete From Watchlist">
-            </form>
-        </div>
+           
+        <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src=<%=thing.img%> alt=<%=thing.title%>>
+                <span class="card-title"><%= thing.title%></span>
+              </div>
+              <div class="card-content">
+                <p><%= thing.synopsis%></p>
+                <ul>
+                  <li>Type: <%= thing.vtype%></li>
+                  <li>Year: <%= thing.year%></li>
+                  <% if(!thing.imdbrating){%>
+                      <% thing.imdbrating = "No Rating Available" %>
+              <%  } %>
+                  <li>IMDB Rating: <%= thing.imdbrating%></li>
+              
+                  </ul>
+              </div>
+              
+                <div class="card-action">
+                    <form action="/watchlist/review/<%= thing.id%>" method="GET">
+                        <input class="reviewButton" type="submit" value="Review it">
+                    </form>
+                    <form action="/watchlist/<%= thing.id%>/?_method=DELETE" method="POST">
+                        <input class="reviewButton" type="submit" value="Delete From Watchlist">
+                    </form>
+                </div>
+            </div>
+          </div>
     <%}%>
-</ul>
+</div>
