--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,6 +199,8 @@ label {
 .description{
   display: inline-block;
   width: 90vw;
+  margin: 0 auto;
+  text-align: center;
 }
 .views{
   display: flex;
