--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,5 +1,6 @@
 <div class="login">
     <h2>Login</h2>
+    <%- include('../partials/alerts.ejs')%>
     <form action="/auth/login" method="POST">
         <div class="row">
             <div class="col s12">
